--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,7 +62,7 @@ h1, h2, h3, h4, h5, h6 {
   mask-size: 100% 100%;
 }
 
-.simple-icons--valorant {
+.bx--valorant {
   display: inline-block;
   width: 1em;
   height: 1em;
