--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -906,7 +906,7 @@ section .container {
   background: rgba(255, 255, 255, 0.1);
 }
 
-.contact .info-box a {
+.contact .info-box a.youtube {
   font-size: 24px;
   color: #dee2e6;
   border-radius: 50%;
