--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -906,7 +906,7 @@ section .container {
   background: rgba(255, 255, 255, 0.1);
 }
 
-.contact .info-box a.youtube {
+.contact .info-box .social-links a.youtube {
   font-size: 24px;
   color: #dee2e6;
   border-radius: 50%;
@@ -944,9 +944,11 @@ section .container {
   transition: 0.3s;
 }
 
+/*
 .contact .info-box .social-links a:hover {
   color: #12d640;
 }
+*/
 
 .contact .php-email-form {
   padding: 30px;
