--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -906,7 +906,34 @@ section .container {
   background: rgba(255, 255, 255, 0.1);
 }
 
+.contact .info-box .social-links a.mail {
+  font-size: 24px;
+  color: #dee2e6;
+  border-radius: 50%;
+  padding: 14px;
+  float: left;
+  background: rgba(255, 255, 255, 0.1);
+}
+
+.contact .info-box .social-links a.Instagram {
+  font-size: 24px;
+  color: #dee2e6;
+  border-radius: 50%;
+  padding: 14px;
+  float: left;
+  background: rgba(255, 255, 255, 0.1);
+}
+
 .contact .info-box .social-links a.youtube {
+  font-size: 24px;
+  color: #dee2e6;
+  border-radius: 50%;
+  padding: 14px;
+  float: left;
+  background: rgba(255, 255, 255, 0.1);
+}
+
+.contact .info-box .social-links a.github {
   font-size: 24px;
   color: #dee2e6;
   border-radius: 50%;
